--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Banx Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="large.css" rel="stylesheet" type="text/css" />
+	<link href="small.css" rel="stylesheet" media="(max-width: 650px)"  type="text/css" />
 	<script src="javascript.js"></script>
 </head>
 
@@ -25,7 +26,7 @@
 				<span>We Are</span>
 				<div class="whiteLine"></div>
 				<h1>Studio Banx</h1>
-				<h5>A creative Web & Print Digital Agency built on method and creative juices</h5>
+				<h5>A creative Web & Print Digital Agency built on method and creative&nbspjuices</h5>
 				<div class="whiteLineBottom"></div>
 				<button class="blueButton">See our work</button>
 				<button class="redButton">meet the team</button>	
@@ -39,45 +40,51 @@
 			<h2>Our Worx</h2>
 			<div class="whiteLineBottom"></div>
 			<div id="virtues">
-				<div class="virtue">
-					<img src="images/desire.png">
-					<h3>Desire</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+				<div class="wrapper">
+					<div class="virtue">
+						<img src="images/desire.png">
+						<h3>Desire</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+					</div>
+					<div class="virtue">
+						<img src="images/aspiration.png">
+						<h3>Aspiration</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+					</div>
 				</div>
-				<div class="virtue">
-					<img src="images/aspiration.png">
-					<h3>Aspiration</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
-				</div>
-				<div class="virtue">
-					<img src="images/design.png">
-					<h3>Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
-				</div>
-				<div class="virtue">
-					<img src="images/lust.png">
-					<h3>Lust</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+				<div class="wrapper">
+					<div class="virtue">
+						<img src="images/design.png">
+						<h3>Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+					</div>
+					<div class="virtue">
+						<img src="images/lust.png">
+						<h3>Lust</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros ligula, lacinia quis euismod in, dignissim at neque. Aliquam quis consectetur magna.</p>
+					</div>
 				</div>
 			</div>
-			<div class="whiteLineBottom"></div>
+			<div id="whiteLine2"></div>
 			<button class="blueButton">See our work</button>
 			<button class="redButton">meet the team</button>
 		</div>
 
 		<div id="awesome">
-				<div class="awesomeBox">
+			<div id="awesomeContainter">
 				<h3>What makes us so awesome</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
-				<button class="viewMore">View More</button>
-			</div>
-			<div class="awesomeBox notFirst">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
-				<button class="viewMore">View More</button>			
-			</div>
-			<div class="awesomeBox">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
-				<button class="viewMore">View More</button>
+				<div class="awesomeBox">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
+					<button class="viewMore">View More</button>
+				</div>
+				<div class="awesomeBox notFirst">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
+					<button class="viewMore">View More</button>			
+				</div>
+				<div class="awesomeBox">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duiseros ligula, lacinia quis euismod in, dignissim at neque. Aliquamquis consectetur magna.</p>
+					<a href="#"><button class="viewMore">View More</button></a>
+				</div>
 			</div>	
 		</div>
 
